--- a/client/modules/demo-app/routes/events/events.css
+++ b/client/modules/demo-app/routes/events/events.css
@@ -21,6 +21,8 @@ body {
     margin-left:auto;
     margin-right:auto;
     max-width:900px;
+    font-family: robotoLight, Arial, sans-serif;
+    font-size: 12pt;
 }
 
 .createEventView {
@@ -29,7 +31,6 @@ body {
     -moz-box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.75);
 
-    font-family: "robotoLight";
     margin-left:auto;
     margin-right:auto;
 }
@@ -51,7 +52,7 @@ body {
 
 .header h1 {
     font-size: 18pt;
-    font-family: "robotoBold";
+    font-family: robotoBold, "Arial Black", sans-serif;
     color:black;
 }
 
@@ -81,23 +82,18 @@ body {
 .createEventBody input {
     height:24px;
     width:300px;
-    font-size: 12pt;
 }
 
 .createEventBody .number {
     height:24px;
     width:100px;
-    font-size: 12pt;
 }
 
 .createEventBody .date {
     height:24px;
-    font-size: 12pt;
 }
 
 .createEventBody button {
-    height:40px;
-    font-size: 12pt;
     float:right;
 }
 
