--- a/client/modules/demo-app/routes/events/events.css
+++ b/client/modules/demo-app/routes/events/events.css
@@ -53,7 +53,7 @@ body {
 .header h1 {
     font-size: 18pt;
     font-family: robotoBold, "Arial Black", sans-serif;
-    color:black;
+    color: white;
 }
 
 .createEventBody label{
